# Deployment

./: .gitignore  CMakeLists.txt  README.md
examples/: arcface_test.cpp  cli.cpp  svr.cpp
py_onnx/: arcface_test.py  export_onnx.py
src/application/: cuda_tools.cpp  cuda_tools.h  tensor.cpp  tensor.h  trt_infer.cpp  trt_infer.h
src/application/arcface/: arcface.cpp  arcface.h
src/net/: buffer.cpp  buffer.h  channel.cpp  channel.h  conn.cpp  conn.h  def.h  event_base.cpp  event_base.h  logging.cpp  logging.h  net.cpp  net.h  threads.cpp  threads.h  utils.cpp  utils.h
